# Vlt-Bridge

./: .auto-claude-status  .claude_settings.json  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  README.md  debug_mcp_endpoint.py  inspect_mcp_types.py  spaces_README.md  start-desktop.sh  test-results-summary.txt  test_elevenlabs_key.py  test_remote_mcp.py  vlt.toml
backend/: .env.example  TEST_VERIFICATION_SUMMARY.md  pyproject.toml  test_headers.py  test_sanitizer_standalone.py  verify_sanitizer.py
backend/prompts/: tools.json
backend/prompts/oracle/: system.md
backend/prompts/research/: brief.md  compress.md  report.md  researcher.md  think.md
backend/prompts/shared/: environment.md  tools-reference.md
backend/src/api/: main.py
backend/src/bt/: __init__.py
backend/src/mcp/: server.py
backend/src/models/: __init__.py  agent_state.py  bt_debug.py  coderag.py  daemon.py  note.py  notifications.py  oracle.py  oracle_context.py  project.py  query_classification.py  rag.py  research.py  rule.py  search.py  session.py  settings.py  signals.py  user.py
backend/src/services/: __init__.py  auth.py  config.py  context_tree_service.py  ctf_flag.py  daemon_service.py  daemon_sync.py  database.py  fallback_classifier.py  github_service.py  indexer.py  model_capabilities.py  model_provider.py  openrouter_search.py  oracle_agent.py  oracle_bridge.py  project_service.py  prompt_composer.py  query_classifier.py  rag_index.py  sanitizer.py  seed.py  session_service.py  signal_parser.py  tavily_service.py  tool_executor.py  user_settings.py  (+1 more)
(+548 files in other folders)
