[project]
name = "document-mcp"
version = "0.1.0"
description = "Multi-tenant Obsidian-like documentation viewer with AI-first workflow via MCP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "documentation", "obsidian", "ai-agents", "fastapi", "fastmcp"]
dependencies = [
    "duckduckgo-search>=7.0.0",
    "fastapi>=0.121.2",
    "fastmcp>=2.13.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.1.4",
    "llama-index>=0.10.0",
    "llama-index-embeddings-google-genai",
    "llama-index-llms-google-genai",
    "mcp>=1.21.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.1.0",
    "sqlalchemy>=2.0",
    "sse-starlette>=2.1.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.38.0",
    "python-toon>=0.1.3",
    "lupa>=2.0",
    "simpleeval>=1.0.0",
    "toml>=0.10.2",
    "tavily-python>=0.5.0",
    "watchdog>=4.0.0",
    "ddgs>=9.10.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
